syntax = "proto3";

package direktiv_functions;

option go_package = "github.com/direktiv/direktiv/pkg/functions/grpc";

message CancelPodRequest {
  optional string actionID = 1;
}
