syntax = "proto3";

package direktiv_functions;

option go_package = "github.com/vorteil/direktiv/pkg/functions/grpc";

import "pkg/functions/grpc/functions-common.proto";

message CreatePodRequest {
	optional BaseInfo info = 1;

  optional string actionID = 2;
  optional string InstanceID = 3;
  optional int64 step = 4;
}

message CreatePodResponse {
  optional string ip = 1;
	optional string hostname = 2;
}
